--- a/netflix-Clone/package.json
+++ b/netflix-Clone/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "netflix-clone",
+  "homepage": "https://Fikremariam21.github.io/Netflix-Clone-2025",
+  "name": "netflix-clone-2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
+    
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,7 +22,11 @@
     "movie-trailer": "^3.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-youtube": "^10.1.0"
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "react-youtube": "^10.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -30,6 +38,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.4",
